--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+:root {
+  --primary-color: rgba(242, 71, 71 ,1);
+  --white: rgba(255, 255, 255, 1);
+}
